--- a/css/basic.css
+++ b/css/basic.css
@@ -6,21 +6,42 @@ body {
 	overflow: hidden;
 }
 
-.Teacher{
+@font-face {
+  font-family: KozMinPro;
+  src: url(../assets/KozMinPro-Medium.otf) format("opentype");
+}
+
+.info{
+	position:absolute;
+	z-index:2;
+	font-family:KozMinPro;
+	font-size:20px;
+	color:#808080;
+}
+
+.TeacherDiv{
 	position: absolute;
-	width:200px;
-	height:200px;
+	width:195px;
+	height:250px;
 	transform:scale(0.0);
 	transform-origin:center center;
 }
 
-.TeacherPhoto{
-	position: absolute;
+.TeacherBtn{
+	position: static;
 	max-width:100%;
-	max-height:100%;
+	max-height:auto;
 	top:0;
 	left:0;
-	opacity:0;
+}
+
+.TeacherText{
+	position:relative;
+	font-family:KozMinPro;
+	font-size:14px;
+	font-weight: bold;
+	left:10%;	
+	color:#808080;
 }
 
 .blowUp {
