--- a/css/basic.css
+++ b/css/basic.css
@@ -31,8 +31,6 @@ body {
 	position: static;
 	max-width:100%;
 	max-height:auto;
-	top:0;
-	left:0;
 }
 
 .TeacherText{
@@ -44,22 +42,71 @@ body {
 	color:#808080;
 }
 
+.selectTeacher{
+	position: absolute;
+	width:195px;
+	height:195px;
+	transition: 1s ease-in-out;
+	transform-origin:center center;
+}
+
+.selectImg{
+	position: static;
+	max-width:100%;
+	max-height:auto;
+}
+
+/*------------------------
+pop-up 
+--------------------------*/
+.backplane{
+	position:absolute;
+	z-index:5;
+	width:100%;
+	height:100%;
+	/*background-color: rgba(0, 0, 0, 0.5);*/
+	visibility: hidden;
+}
+
+.popupFrame{
+	position:absolute;
+	z-index:6;
+	width:1536px;
+	height:864px;
+	box-shadow: 0px 0px 91px 8px rgba(0,0,0,0.31);
+	/*border:3px groove #808080;*/
+	transform:scale(0.0);
+	transform-origin:center center;
+}
+
+.closeBtn{
+	position:absolute;
+	z-index:7;
+
+	transform:scale(0.0);
+	transform-origin:center center;
+}
+
+/*------------------------
+Animation
+--------------------------*/
 .blowUp {
 	transform:scale(1.0);
-	transition:200ms ease-in-out;	
+	transition: 300ms ease-in-out;
 }
 
 .blowDown {
 	transform:scale(0.0);
-	transition:200ms ease-in-out;
+	transition: 300ms ease-in-out;
 }
+
 
 .fadeIn {
 	opacity:1;    
-    transition: opacity 0.2s;
+    transition: 300ms ease-in-out;
 }
 
 .fadeOut {
 	opacity:0;
-    transition: opacity 0.2s;	
+    transition: 300ms ease-in-out;	
 }
