--- a/css/info.css
+++ b/css/info.css
@@ -1,4 +1,17 @@
 
+@font-face {
+  font-family: KozMinPro;
+  src: url(../assets/KozMinPro-Medium.otf) format("opentype");
+}
+
+.personalPhoto{
+	float:right;
+	margin:15px;
+
+	width:230px;
+	height:auto;
+}
+
 .displayDiv{
 	position:absolute;
 	width:1175px;
@@ -7,6 +20,43 @@
 	border:3px solid #FFFFFF;
 }
 
+.infoDiv{
+	position:absolute;
+	left:11.66%;
+	top:7.29%;
+	width:75.06%;
+	height:86.16%;
+
+}
+
+.mediaDiv{
+	width:882px;
+	height:527px;
+}
+
+.media{
+	max-height:100%;
+	max-width:100%;
+	margin: 0 auto;
+	display: block;
+}
+
+/*------------------------
+Text
+--------------------------*/
+.IntroText{
+	font-family:KozMinPro;
+	font-size:25px;
+	color:#F2F2F2;
+	line-height: 30px;
+}
+
+.ItemIntro{
+	font-family:KozMinPro;
+	font-size:20px;
+	color:#F2F2F2;
+	text-align: center;
+}
 
 /*------------------------
 Animation
