--- a/css/basic.css
+++ b/css/basic.css
@@ -15,8 +15,23 @@ body {
 	position:absolute;
 	z-index:2;
 	font-family:KozMinPro;
-	font-size:20px;
+	font-size:24px;
+	line-height: 26px;
 	color:#808080;
+}
+
+.photoDiv{
+	position:absolute;
+	z-index:3;
+	width:224px;
+	height:157px;
+}
+
+.photo{
+	max-height:100%;
+	max-width:100%;
+	margin: 0 auto;
+	display: block;
 }
 
 .TeacherDiv{
@@ -36,10 +51,9 @@ body {
 .TeacherText{
 	position:relative;
 	font-family:KozMinPro;
-	font-size:14px;
-	font-weight: bold;
+	font-size:20px;
+	line-height: 22px;
 	left:10%;	
-	color:#808080;
 }
 
 .selectTeacher{
@@ -64,7 +78,7 @@ pop-up
 	z-index:5;
 	width:100%;
 	height:100%;
-	/*background-color: rgba(0, 0, 0, 0.5);*/
+	background-color: rgba(242, 242, 242, 0.77);
 	visibility: hidden;
 }
 
