--- a/css/basic.css
+++ b/css/basic.css
@@ -1,5 +1,17 @@
 
 *, *:after, *:before { -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; }
+
+*:focus {
+    outline: 0;
+}
+
+* {
+   -moz-user-select: -moz-none;
+   -khtml-user-select: none;
+   -webkit-user-select: none;
+   user-select: none;
+}
+
 body, html { font-size: 100%; padding: 0; margin: 0;}
 
 body {
@@ -9,6 +21,13 @@ body {
 @font-face {
   font-family: KozMinPro;
   src: url(../assets/KozMinPro-Medium.otf) format("opentype");
+}
+
+.LoopVideo{
+	position:absolute;
+	z-index:10;
+	width:100%;
+	height:auto%;
 }
 
 .info{
@@ -123,4 +142,14 @@ Animation
 .fadeOut {
 	opacity:0;
     transition: 300ms ease-in-out;	
+}
+
+.fadeInSlow {
+	opacity:1;    
+    transition: 800ms ease-in-out;
+}
+
+.fadeOutSlow {
+	opacity:0;
+    transition: 800ms ease-in-out;	
 }
